--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://zyestin.github.io/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'zyestin'
+theme = 'ananke'
