--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://zyestin.github.io/'
+baseURL = 'http://zyestin.github.io/'
 languageCode = 'en-us'
 title = 'zyestin'
 theme = 'ananke'
