--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,11 @@ baseURL = 'https://zyestin.github.io/zyestin/'
 languageCode = 'en-us'
 title = 'zyestin'
 theme = 'ananke'
+
+[imaging]
+  bgColor = '#ffffff'
+  hint = 'photo'
+  quality = 75
+  resampleFilter = 'box'
+
+
