--- a/hugo.toml
+++ b/hugo.toml
@@ -2,6 +2,7 @@ baseURL = 'https://zyestin.github.io/zyestin/'
 languageCode = 'en-us'
 title = 'zyestin'
 theme = 'ananke'
+timeZone = 'Asia/Shanghai'
 
 [imaging]
   bgColor = '#ffffff'
@@ -13,3 +14,30 @@ theme = 'ananke'
 [taxonomies]
   category = 'categories'
   tag = 'tags'
+
+[params]
+  text_color = ""
+  author = "yestin"
+  favicon = "https://avatars.githubusercontent.com/u/51897571?s=40&v=4"
+  site_logo = "https://avatars.githubusercontent.com/u/51897571?s=40&v=4"
+  description = "yestin (Front-end Developer)"
+  # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
+  background_color_class = "bg-black"
+  recent_posts_number = 5
+  post_content_classes = "avenir bg-near-white"
+
+
+[[params.ananke_socials]]
+  name = "All"
+    url = "https://zyestin.github.io/zyestin/posts/rn/readme/"
+[[params.ananke_socials]]
+  name = "github"
+    url = "https://github.com/zyestin"
+[[params.ananke_socials]]
+  name = "Jian"
+    url = "https://www.jianshu.com/u/3601cd1fe82d"
+    label = "Jian"
+[[params.ananke_socials]]
+  name = "CSDN"
+    url = "https://blog.csdn.net/wustzhy2016"
+    label = "csdn"
