--- a/hugo.toml
+++ b/hugo.toml
@@ -242,9 +242,9 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
     # 是否在搜索索引中使用基于 baseURL 的绝对路径
     absoluteURL = false
     [params.search.algolia]
-      index = ""
-      appID = ""
-      searchKey = ""
+      index = "zyestin"
+      appID = "TPCRI4M7VR"
+      searchKey = "da62d5495b763715ccc85b9bec41e1e5"
 
   # Home page config
   # 主页信息设置
@@ -679,9 +679,9 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
         highlightTag = "em"
         absoluteURL = false
         [languages.en.params.search.algolia]
-          index = "index.en"
-          appID = "PASDMWALPK"
-          searchKey = "b42948e51daaa93df92381c8e2ac0f93"
+          index = "zyestin"
+          appID = "TPCRI4M7VR"
+          searchKey = "da62d5495b763715ccc85b9bec41e1e5"
       [languages.en.params.home]
         rss = 10
         [languages.en.params.home.profile]
@@ -763,9 +763,9 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
         highlightTag = "em"
         absoluteURL = false
         [languages.zh-cn.params.search.algolia]
-          index = "index.zh-cn"
-          appID = "PASDMWALPK"
-          searchKey = "b42948e51daaa93df92381c8e2ac0f93"
+          index = "zyestin"
+          appID = "TPCRI4M7VR"
+          searchKey = "da62d5495b763715ccc85b9bec41e1e5"
       [languages.zh-cn.params.home]
         rss = 10
         [languages.zh-cn.params.home.profile]
